<resources>
    <string name="app_name">ProyectoSimagrow</string>
    <string name="txtCotDescImgSimarro">Imagen Logo Simarro</string>
    <string name="txtBtnEntrar">Entrar APP</string>
    <string name="txtSimagrow">SIMAGROW</string>
    <string name="txtHintTvUser">Usuario...</string>
    <string name="txtHintTvPassword">Contraseña...</string>
    <string name="txtBtnSalirLogin">SALIR DE APP</string>
    <string name="txtBtnEntrarLogin">INICIAR SESIÓN</string>
    <string name="txtUserMain">USUARIO:</string>
    <string name="txtPasswordMain">PASSWORD</string>
    <string name="defaultTxt">null</string>
    <string name="txtContDescrImgCardView">Imagen Card View</string>
    <string name="txtBienvenido">BIENVENID@</string>
    <string name="txtMenuIncidencia">Incidencias</string>
    <string name="txtMenuPremios">Premios</string>
    <string name="txtMenuPerfil">Perfil</string>
    <string name="txtContDescrFilamento">Imagen de Filamento</string>
    <string name="txtNombreFilamento">Nombre</string>
    <string name="txtCategoriaFilamento">CATEGORIA</string>
    <string name="txtPrecio">Precio: </string>
    <string name="txtPrecioFilamento">10</string>
    <string name="txtTokens">Tokens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvInfoRecompensas">Lista de las Recompensas</string>
    <string name="txtIncidencia">Rellena los datos de la Incidencia</string>
    <string name="txtHintNombreIncidencia">Nombre de la incidenciaResponse</string>
    <string name="hintDescripcionIncidencia">Escribe los detalles de la Incidencia...</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnEnviar">Enviar</string>
    <string name="txtLogin">Iniciar Sesion</string>
    <string name="txtTvNombre">Nombre:</string>
    <string name="txtTvInfoNombre">Nombre Completo Usuario</string>
    <string name="txtTvClase">Clase:</string>
    <string name="txtTvInfoClase">2º DAM Presencial</string>
    <string name="txtTvNie">NIE:</string>
    <string name="txtTvInfoNie">00000000</string>
    <string name="txtTvNIncidencias">Nº de Incidencias:</string>
    <string name="txtTvInfoNIncidencias">12</string>
    <string name="txtBtnConsultarIncidencias">Consultar Incidencias</string>
    <string name="required">Obligatorio!!!</string>
    <string name="txtTvNTokens">Nº de Tokens:</string>
    <string name="txtTvInfoNTokens">100</string>
    <string name="txtContDescrToken">Imagen del Token</string>
    <string name="txtContDescrpLogo">Imagen del logo de Simagrow</string>
    <string name="txtContDescrIvRecompensa">Imagen de la Recmpensa</string>
    <string name="txtMenuRecompensas">Recompensas</string>
    <string name="txtTvSeleccionaLugar">Dónde se ha producido la Incidencia???</string>
    <string name="txtBtnComprarRecompensa">Comprar</string>
    <string name="txtContentDescriptionIvImagemusuario">Imagen del Usuario</string>
    <string name="txtTvNombreUsuario">Nombre del Usuasrio</string>
    <string name="txtTvCorreoUsuario">correodelusuario@alu.edu.gva.es</string>
    <string name="txtContentDescriptionIvLogoSimarro">Imagen del Logo del IES Lluis Simarro</string>
    <string name="txtTvIdIncidencia">1</string>
    <string name="txtTvNombreIncidencia">Nombre de la Incidencia</string>
    <string name="txtTvEstadoIncidencia">"Estado: "</string>
    <string name="txtTvTextoIncidencias">Aquí se muestra tus incidencias</string>
    <string name="txtTvDatosIncidencias">No tienes incidencias todavía</string>
    <string name="txtDrawerMenuItemCerrarSesion">Cerrar Sesión</string>
    <string name="txtDrawerMenuItemHome">Home</string>
    <string name="txtDrawerMenuItemPerfil">Perfil</string>
    <string name="txtDrawerMenuItemConfiguracion">Configuración</string>
    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>
    <string name="txtDrawerMenuItemIncidendias">Incidencias</string>
    <string name="txtDrawerMenuItemNuevaIncidendia">Nueva Incidencia</string>
    <string name="txtDrawerMenuItemRecompensas">Recompensas</string>
    <string name="txtDrawerMenuItemNoticias">Noticias</string>
    <string name="txtTvTextoIncidencia">Rellena tu Incidencia</string>
    <string name="txtHintTvNombreIncidencia">Título de la Incidencia</string>
    <string name="txtHelperTextTvNombreIncidencia">Máximo 50 carácteres!!!</string>
    <string name="txtHintTvDescripciónIncidencia">Descripción de la Incidencia</string>
    <string name="txtHintTvDescripcionIncidencia">Descripción de la Incidencia</string>
    <string name="txtHelperTextTvDescripcionIncidencia">Máximo 250 carácteres!!!</string>
    <string name="txtBtnBorrar">Borrar</string>
    <string name="txtBtnEnviar">Enviar</string>
    <string name="txtContentDescriptionIvImgAlumno">Imagen del Alumno</string>
    <string name="txtContentDescriptionIvToken">Imagen del Token</string>
    <string name="txtTvNumTokens">100</string>
    <string name="txtTvNumeroTokens">100</string>
    <string name="tvTextoTokes">"Dispones de 100 "</string>
    <string name="txtTvTextoNiaAlumno">NIA:</string>
    <string name="txtTvNiaAlumno">10639258</string>
    <string name="txtTvTextoNombreAlumno">Nombre:</string>
    <string name="txtTvNombreAlumno">Marcos Durà Blasco</string>
    <string name="txtTvTextoCorreoAlumno">Correo:</string>
    <string name="txtTvCorreoAlumno">mardurbla@alu.edu.gva.es</string>
    <string-array name="inicidencias_filter">
        <item>Todas</item>
        <item>Resueltas</item>
        <item>No resueltas</item>
    </string-array>
    <string-array name="Recompensas_filter">
        <item>Filamentos</item>
        <item>Snacks</item>
        <item>Merchandising</item>
    </string-array>
</resources>
