<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/drawer_header"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivImagenUsuario"
        android:layout_width="@dimen/ivImagenUsuario"
        android:layout_height="@dimen/ivImagenUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:drawable/sym_def_app_icon"
        android:contentDescription="@string/txtContentDescriptionIvImagemusuario"
        />
    
    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImagenUsuario"
        android:layout_marginTop="10dp"
        android:text="@string/txtTvNombreUsuario"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvCorreoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombreUsuario"
        android:layout_marginTop="10dp"
        android:text="@string/txtTvCorreoUsuario"
        android:textSize="16sp"
        />

    <ImageView
        android:id="@+id/ivLogoSimarro"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:contentDescription="@string/txtContentDescriptionIvLogoSimarro"
        android:src="@drawable/logo_simarro"
        app:layout_constraintStart_toEndOf="@id/ivImagenUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvNumeroTokens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCorreoUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/txtTvNumeroTokens"
        android:textSize="16sp"
        />

    <ImageView
        android:id="@+id/ivToken"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/tvNumeroTokens"
        app:layout_constraintTop_toBottomOf="@id/tvCorreoUsuario"
        android:layout_marginTop="10dp"
        android:src="@drawable/token"
        android:contentDescription="@string/txtContentDescriptionIvToken"
        />

</androidx.constraintlayout.widget.ConstraintLayout>