<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.IncidenciasFragment"
    android:orientation="vertical"
    android:padding="20dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <TextView
        android:id="@+id/tvIncidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtIncidencia"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/simagrow"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <EditText
        android:id="@+id/etNombreIncidencia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/txtHintNombreIncidencia"
        android:inputType="text"
        android:autofillHints="name"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <Spinner
        android:id="@+id/spinnerEspacioIncidencia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <EditText
        android:id="@+id/etDescripcionIncidencias"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top|start"
        android:hint="@string/hintDescripcionIncidencia"
        android:inputType="textMultiLine"
        tools:ignore="Autofill"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnBorrar"
            android:textSize="18sp"
            android:backgroundTint="@color/simagrow"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/btnEnviarIncidencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEnviar"
            android:textSize="18sp"
            android:backgroundTint="@color/simagrow"
            tools:ignore="ButtonStyle"
            />

    </LinearLayout>

</LinearLayout>