<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/ivRecompensa"
            android:layout_width="@dimen/carViewImg"
            android:layout_height="@dimen/carViewImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/filamento"
            android:contentDescription="@string/txtContDescrIvRecompensa"
            />

        <TextView
            android:id="@+id/tvNombreRecompensa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivRecompensa"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/txtNombreFilamento"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/tvPrecioRecompensa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivRecompensa"
            app:layout_constraintTop_toBottomOf="@id/tvNombreRecompensa"
            android:text="@string/txtPrecioFilamento"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/tvTokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvPrecioRecompensa"
            app:layout_constraintTop_toBottomOf="@id/tvNombreRecompensa"
            android:text="@string/txtTokens"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />

        <Button
            android:id="@+id/btnComprarRecompensa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txtBtnComprarRecompensa"
            android:backgroundTint="@color/simagrow"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>