<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvIdIncidencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/txtTvIdIncidencia"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvNombreIncidencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvIdIncidencia"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:text="@string/txtTvNombreIncidencia"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tvEstadoIncidencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvIdIncidencia"
        app:layout_constraintTop_toBottomOf="@id/tvNombreIncidencia"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtTvEstadoIncidencia"
        android:textSize="18sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>